Fix logo bigger on small screens

--- a/styling.css
+++ b/styling.css
@@ -12,8 +12,12 @@ body {
   display: none;
 }
 
+#logo {
+  width: 220px;
+}
+
 h1 {
-  font-size: 75px;
+  font-size: 50px;
   margin: 0px;
 }
 
@@ -23,7 +27,7 @@ h2 {
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 24px;
   padding: 0px;
   margin: 0px;
 }
@@ -37,7 +41,7 @@ a {
   color: black;
   font-weight: 700;
   font-style: normal;
-  font-size: 28px;
+  font-size: 24px;
   padding-right: 15px;
 }
 
@@ -61,7 +65,7 @@ a:hover {
 
 .top-hero {
   display: grid;
-  grid-template-columns: 5% 35% 15%;
+  grid-template-columns: 15% 35% 15%;
   grid-template-rows: 3% 25% 50% 10%;
   max-height: 103vh;
   height: min-content;
@@ -289,7 +293,7 @@ a:hover {
   }
 
   .header-menu-logo svg {
-    width: 150px;
+    width: 175px;
   }
 
   #ingrid {
